[package]
name = "issue"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
crossterm = "0.28.1"
dirs = "5.0.1"
once_cell = "1.19.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
toml = "0.8.19"
uuid = { version = "1.11.0", features = ["v4"] }
clap_complete = "4.4"
regex = "1.11.1"
